update rnn solution

--- a/practice4_nlp_intro/pratice4_nlp_intro.ipynb
+++ b/practice4_nlp_intro/pratice4_nlp_intro.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "<torch._C.Generator at 0x7f2aa48d6e50>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,30 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[-0.1955, -0.9656],\n",
-      "        [ 0.4224,  0.2673]])\n",
-      "tensor([[0.0000, 0.0000],\n",
-      "        [0.4224, 0.2673]])\n",
-      "tensor([[-0.1931, -0.7468],\n",
-      "        [ 0.3990,  0.2611]])\n",
-      "tensor([[0.4513, 0.2758],\n",
-      "        [0.6041, 0.5664]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# In pytorch, most non-linearities are in torch.functional (we have it imported as F)\n",
     "# Note that non-linearites typically don't have parameters like affine maps do.\n",
     "# That is, they don't have weights that are updated during training.\n",
     "data = torch.randn(2, 2)\n",
     "print(data)\n",
+    "\n",
+    "# Activation functions\n",
     "print(F.relu(data))\n",
     "print(torch.tanh(data))\n",
     "print(torch.sigmoid(data))"
@@ -204,17 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 1.3800, -1.3505,  0.3455,  0.5046,  1.8213])\n",
-      "tensor([0.2948, 0.0192, 0.1048, 0.1228, 0.4584])\n",
+      "tensor([ 0.6614,  0.2669,  0.0617,  0.6213, -0.4519])\n",
+      "tensor([0.2847, 0.1919, 0.1563, 0.2735, 0.0935])\n",
       "tensor(1.)\n",
-      "tensor([-1.2214, -3.9519, -2.2560, -2.0969, -0.7801])\n"
+      "tensor([-1.2563, -1.6507, -1.8559, -1.2963, -2.3695])\n"
      ]
     }
    ],
@@ -352,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +378,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['me', 'gusta', 'comer', 'en', 'la', 'cafeteria'], 'SPANISH')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -399,16 +406,16 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[ 0.1194,  0.0609, -0.1268,  0.1274,  0.1191,  0.1739, -0.1099, -0.0323,\n",
-      "         -0.0038,  0.0286, -0.1488, -0.1392,  0.1067, -0.0460,  0.0958,  0.0112,\n",
-      "          0.0644,  0.0431,  0.0713,  0.0972, -0.1816,  0.0987, -0.1379, -0.1480,\n",
-      "          0.0119, -0.0334],\n",
-      "        [ 0.1152, -0.1136, -0.1743,  0.1427, -0.0291,  0.1103,  0.0630, -0.1471,\n",
-      "          0.0394,  0.0471, -0.1313, -0.0931,  0.0669,  0.0351, -0.0834, -0.0594,\n",
-      "          0.1796, -0.0363,  0.1106,  0.0849, -0.1268, -0.1668,  0.1882,  0.0102,\n",
-      "          0.1344,  0.0406]], requires_grad=True)\n",
+      "tensor([[ 0.0716, -0.0764, -0.0143, -0.0177,  0.0284, -0.0008,  0.1714,  0.0610,\n",
+      "         -0.0730, -0.1184, -0.0329, -0.0846, -0.0628,  0.0094,  0.1169,  0.1066,\n",
+      "         -0.1917,  0.1216,  0.0548,  0.1860,  0.1294, -0.1787, -0.1865, -0.0946,\n",
+      "          0.1722, -0.0327],\n",
+      "        [ 0.0839, -0.0911,  0.1924, -0.0830,  0.1471,  0.0023, -0.1033,  0.1008,\n",
+      "         -0.1041,  0.0577, -0.0566, -0.0215, -0.1885, -0.0935,  0.1064, -0.0477,\n",
+      "          0.1953,  0.1572, -0.0092, -0.1309,  0.1194,  0.0609, -0.1268,  0.1274,\n",
+      "          0.1191,  0.1739]], requires_grad=True)\n",
       "Parameter containing:\n",
-      "tensor([0.0631, 0.1465], requires_grad=True)\n"
+      "tensor([-0.1099, -0.0323], requires_grad=True)\n"
      ]
     }
    ],
@@ -462,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -470,16 +477,16 @@
      "output_type": "stream",
      "text": [
       "('linear.weight', Parameter containing:\n",
-      "tensor([[ 0.1194,  0.0609, -0.1268,  0.1274,  0.1191,  0.1739, -0.1099, -0.0323,\n",
-      "         -0.0038,  0.0286, -0.1488, -0.1392,  0.1067, -0.0460,  0.0958,  0.0112,\n",
-      "          0.0644,  0.0431,  0.0713,  0.0972, -0.1816,  0.0987, -0.1379, -0.1480,\n",
-      "          0.0119, -0.0334],\n",
-      "        [ 0.1152, -0.1136, -0.1743,  0.1427, -0.0291,  0.1103,  0.0630, -0.1471,\n",
-      "          0.0394,  0.0471, -0.1313, -0.0931,  0.0669,  0.0351, -0.0834, -0.0594,\n",
-      "          0.1796, -0.0363,  0.1106,  0.0849, -0.1268, -0.1668,  0.1882,  0.0102,\n",
-      "          0.1344,  0.0406]], requires_grad=True))\n",
+      "tensor([[ 0.0716, -0.0764, -0.0143, -0.0177,  0.0284, -0.0008,  0.1714,  0.0610,\n",
+      "         -0.0730, -0.1184, -0.0329, -0.0846, -0.0628,  0.0094,  0.1169,  0.1066,\n",
+      "         -0.1917,  0.1216,  0.0548,  0.1860,  0.1294, -0.1787, -0.1865, -0.0946,\n",
+      "          0.1722, -0.0327],\n",
+      "        [ 0.0839, -0.0911,  0.1924, -0.0830,  0.1471,  0.0023, -0.1033,  0.1008,\n",
+      "         -0.1041,  0.0577, -0.0566, -0.0215, -0.1885, -0.0935,  0.1064, -0.0477,\n",
+      "          0.1953,  0.1572, -0.0092, -0.1309,  0.1194,  0.0609, -0.1268,  0.1274,\n",
+      "          0.1191,  0.1739]], requires_grad=True))\n",
       "('linear.bias', Parameter containing:\n",
-      "tensor([0.0631, 0.1465], requires_grad=True))\n"
+      "tensor([-0.1099, -0.0323], requires_grad=True))\n"
      ]
     }
    ],
@@ -491,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +507,7 @@
        "Linear(in_features=26, out_features=2, bias=True)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,15 +547,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.5378, -0.8771]])\n",
-      "tensor([[0.5840, 0.4160]])\n"
+      "tensor([[-0.8766, -0.5382]])\n",
+      "tensor([[0.4162, 0.5838]])\n"
      ]
     }
    ],
@@ -605,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -615,13 +622,13 @@
       "['Yo', 'creo', 'que', 'si']\n",
       "tensor([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 0., 0., 0., 0., 0., 0.,\n",
       "         0., 0., 0., 0., 0., 1., 1., 0.]])\n",
-      "tensor([[0.3947, 0.6053]])\n",
+      "tensor([[0.4290, 0.5710]])\n",
       "\n",
       "\n",
       "['it', 'is', 'lost', 'on', 'me']\n",
       "tensor([[1., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.,\n",
       "         0., 0., 0., 1., 0., 0., 0., 1.]])\n",
-      "tensor([[0.5279, 0.4721]])\n",
+      "tensor([[0.2763, 0.7237]])\n",
       "\n",
       "\n"
      ]
@@ -641,14 +648,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.1488, -0.1313], grad_fn=<SelectBackward>)\n"
+      "tensor([-0.0329, -0.0566], grad_fn=<SelectBackward>)\n"
      ]
     }
    ],
@@ -659,23 +666,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 loss: 0.410\n",
-      "Epoch 1 loss: 0.293\n",
-      "Epoch 2 loss: 0.226\n",
-      "Epoch 3 loss: 0.184\n",
-      "Epoch 4 loss: 0.154\n",
-      "Epoch 5 loss: 0.133\n",
-      "Epoch 6 loss: 0.117\n",
-      "Epoch 7 loss: 0.104\n",
-      "Epoch 8 loss: 0.094\n",
-      "Epoch 9 loss: 0.085\n"
+      "Epoch 0 loss: 0.762\n",
+      "Epoch 1 loss: 0.478\n",
+      "Epoch 2 loss: 0.337\n",
+      "Epoch 3 loss: 0.256\n",
+      "Epoch 4 loss: 0.205\n",
+      "Epoch 5 loss: 0.170\n",
+      "Epoch 6 loss: 0.145\n",
+      "Epoch 7 loss: 0.126\n",
+      "Epoch 8 loss: 0.112\n",
+      "Epoch 9 loss: 0.100\n"
      ]
     }
    ],
@@ -715,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -723,9 +730,9 @@
      "output_type": "stream",
      "text": [
       "['Yo', 'creo', 'que', 'si']\n",
-      "tensor([[0.6437, 0.3563]])\n",
+      "tensor([[0.6623, 0.3377]])\n",
       "['it', 'is', 'lost', 'on', 'me']\n",
-      "tensor([[0.2213, 0.7787]])\n"
+      "tensor([[0.0937, 0.9063]])\n"
      ]
     }
    ],
@@ -740,14 +747,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0.0831, -0.3633], grad_fn=<SelectBackward>)\n"
+      "tensor([ 0.1808, -0.2703], grad_fn=<SelectBackward>)\n"
      ]
     }
    ],
