--- a/practice3_cnn/cnn.ipynb
+++ b/practice3_cnn/cnn.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# credit : https://github.com/yunjey/pytorch-tutorial/tree/master/tutorials/02-intermediate"
@@ -36,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,17 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 2, 5, 5])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "featuremap = torch.rand(1,2,10,10) # batchsize x channels x height x width    \n",
     "myconv = nn.Conv2d(2,2,kernel_size=3,padding=1,stride=2) \n",
@@ -214,17 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 2, 5, 5])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "featuremap = torch.rand(1,2,10,10) # batchsize x channels x height x width    \n",
     "mypool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
@@ -248,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -257,37 +239,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/5], Step [100/600], Loss: 0.1320\n",
-      "Epoch [1/5], Step [200/600], Loss: 0.1672\n",
-      "Epoch [1/5], Step [300/600], Loss: 0.0346\n",
-      "Epoch [1/5], Step [400/600], Loss: 0.0268\n",
-      "Epoch [1/5], Step [500/600], Loss: 0.0777\n",
-      "Epoch [1/5], Step [600/600], Loss: 0.0171\n",
-      "Epoch [2/5], Step [100/600], Loss: 0.0908\n",
-      "Epoch [2/5], Step [200/600], Loss: 0.0434\n",
-      "Epoch [2/5], Step [300/600], Loss: 0.0333\n",
-      "Epoch [2/5], Step [400/600], Loss: 0.0127\n",
-      "Epoch [2/5], Step [500/600], Loss: 0.0888\n",
-      "Epoch [2/5], Step [600/600], Loss: 0.0117\n",
-      "Epoch [3/5], Step [100/600], Loss: 0.0208\n",
-      "Epoch [3/5], Step [200/600], Loss: 0.0349\n",
-      "Epoch [3/5], Step [300/600], Loss: 0.0179\n",
-      "Epoch [3/5], Step [400/600], Loss: 0.0899\n",
-      "Epoch [3/5], Step [500/600], Loss: 0.0385\n",
-      "Epoch [3/5], Step [600/600], Loss: 0.0322\n",
-      "Epoch [4/5], Step [100/600], Loss: 0.0048\n",
-      "Epoch [4/5], Step [200/600], Loss: 0.0080\n",
-      "Epoch [4/5], Step [300/600], Loss: 0.0736\n",
-      "Epoch [4/5], Step [400/600], Loss: 0.0072\n",
-      "Epoch [4/5], Step [500/600], Loss: 0.0362\n",
-      "Epoch [4/5], Step [600/600], Loss: 0.0569\n",
-      "Epoch [5/5], Step [100/600], Loss: 0.0174\n",
-      "Epoch [5/5], Step [200/600], Loss: 0.0146\n",
-      "Epoch [5/5], Step [300/600], Loss: 0.0520\n",
-      "Epoch [5/5], Step [400/600], Loss: 0.0080\n",
-      "Epoch [5/5], Step [500/600], Loss: 0.0499\n",
-      "Epoch [5/5], Step [600/600], Loss: 0.0054\n",
-      "Test Accuracy of the model on the 10000 test images: 99.11 %\n"
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Processing...\n",
+      "Done!\n"
      ]
     }
    ],
@@ -356,7 +313,15 @@
     "        return out\n",
     "\n",
     "model = ConvNet(num_classes).to(device)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Loss and optimizer\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
@@ -403,30 +368,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
