--- a/practice7_word_embedding/practice7_word_embedding.ipynb
+++ b/practice7_word_embedding/practice7_word_embedding.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "<torch._C.Generator at 0x7ff8af851e70>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -280,23 +280,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "518.801763773\n",
-      "516.181431532\n",
-      "513.577992916\n",
-      "510.990511417\n",
-      "508.416782379\n",
-      "505.855627298\n",
-      "503.30651927\n",
-      "500.767189026\n",
-      "498.239493847\n",
-      "495.72187376\n"
+      "518.524806023\n",
+      "515.954659462\n",
+      "513.402489901\n",
+      "510.865208149\n",
+      "508.342717886\n",
+      "505.833504438\n",
+      "503.338867426\n",
+      "500.857864618\n",
+      "498.388657331\n",
+      "495.931318283\n"
      ]
     }
    ],
@@ -448,6 +448,15 @@
     "\n",
     "\n",
     "make_context_vector(data[0][0], word_to_ix)  # example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train"
    ]
   }
  ],
