--- a/practice8_language_modeling/practice8_language_modeling.ipynb
+++ b/practice8_language_modeling/practice8_language_modeling.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f1535dd9ef0>"
+       "<torch._C.Generator at 0x7f7226412ed0>"
       ]
      },
      "execution_count": 2,
@@ -211,12 +211,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "model = RNNModel(10, 10, 10, 10, 0.5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('encoder.weight', Parameter containing:\n",
+       " tensor([[-1.5256, -0.7502, -0.6540, -1.6095, -0.1002, -0.6092, -0.9798, -1.6091,\n",
+       "          -0.7121,  0.3037],\n",
+       "         [-0.7773, -0.2515, -0.2223,  1.6871,  0.2284,  0.4676, -0.6970, -1.1608,\n",
+       "           0.6995,  0.1991],\n",
+       "         [ 0.8657,  0.2444, -0.6629,  0.8073,  1.1017, -0.1759, -2.2456, -1.4465,\n",
+       "           0.0612, -0.6177],\n",
+       "         [-0.7981, -0.1316,  1.8793, -0.0721,  0.1578, -0.7735,  0.1991,  0.0457,\n",
+       "           0.1530, -0.4757],\n",
+       "         [-0.1110,  0.2927, -0.1578, -0.0288,  2.3571, -1.0373,  1.5748, -0.6298,\n",
+       "          -0.9274,  0.5451],\n",
+       "         [ 0.0663, -0.4370,  0.7626,  0.4415,  1.1651,  2.0154,  0.1374,  0.9386,\n",
+       "          -0.1860, -0.6446],\n",
+       "         [ 1.5392, -0.8696, -3.3312, -0.7479, -0.0255, -1.0233, -0.5962, -1.0055,\n",
+       "          -0.2106, -0.0075],\n",
+       "         [ 1.6734,  0.0103, -0.7040, -0.1853, -0.9962, -0.8313, -0.4610, -0.5601,\n",
+       "           0.3956, -0.9823],\n",
+       "         [-0.5065,  0.0998, -0.6540,  0.7317,  1.3851, -0.8138, -0.9276,  1.1120,\n",
+       "           0.6155,  0.1938],\n",
+       "         [-2.5832,  0.8539, -2.1021, -0.6200, -1.4782, -1.1334, -0.1010,  0.3434,\n",
+       "          -1.0703, -0.8743]], requires_grad=True))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(model.named_parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +305,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([20886, 100])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,21 +340,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def repackage_hidden(h):\n",
     "    \"\"\"Wraps hidden states in new Tensors, to detach them from their history.\"\"\"\n",
     "    if isinstance(h, torch.Tensor):\n",
-    "        return h.detach()\n",
+    "        return h.detach() # h.data\n",
     "    else:\n",
     "        return tuple(repackage_hidden(v) for v in h)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,53 +435,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| end of epoch   1 | time: 25.55s | valid loss  5.81 | valid ppl   335.22\n",
-      "| end of epoch   2 | time: 25.97s | valid loss  5.59 | valid ppl   267.38\n",
-      "| end of epoch   3 | time: 27.29s | valid loss  5.43 | valid ppl   228.49\n",
-      "| end of epoch   4 | time: 27.35s | valid loss  5.35 | valid ppl   210.01\n",
-      "| end of epoch   5 | time: 27.40s | valid loss  5.28 | valid ppl   195.92\n",
-      "| end of epoch   6 | time: 27.63s | valid loss  5.23 | valid ppl   187.52\n",
-      "| end of epoch   7 | time: 27.83s | valid loss  5.19 | valid ppl   179.54\n",
-      "| end of epoch   8 | time: 27.74s | valid loss  5.16 | valid ppl   174.72\n",
-      "| end of epoch   9 | time: 27.65s | valid loss  5.15 | valid ppl   172.32\n",
-      "| end of epoch  10 | time: 27.56s | valid loss  5.12 | valid ppl   167.98\n",
-      "| end of epoch  11 | time: 27.50s | valid loss  5.11 | valid ppl   165.28\n",
-      "| end of epoch  12 | time: 27.62s | valid loss  5.09 | valid ppl   162.72\n",
-      "| end of epoch  13 | time: 27.47s | valid loss  5.09 | valid ppl   161.88\n",
-      "| end of epoch  14 | time: 27.10s | valid loss  5.07 | valid ppl   159.27\n",
-      "| end of epoch  15 | time: 27.38s | valid loss  5.06 | valid ppl   157.10\n",
-      "| end of epoch  16 | time: 27.35s | valid loss  5.06 | valid ppl   157.20\n",
-      "| end of epoch  17 | time: 27.27s | valid loss  5.05 | valid ppl   155.65\n",
-      "| end of epoch  18 | time: 27.16s | valid loss  5.04 | valid ppl   154.16\n",
-      "| end of epoch  19 | time: 27.30s | valid loss  5.05 | valid ppl   156.24\n",
-      "| end of epoch  20 | time: 27.45s | valid loss  5.05 | valid ppl   155.27\n",
-      "| end of epoch  21 | time: 27.14s | valid loss  5.03 | valid ppl   152.89\n",
-      "| end of epoch  22 | time: 27.20s | valid loss  5.02 | valid ppl   151.83\n",
-      "| end of epoch  23 | time: 27.50s | valid loss  5.02 | valid ppl   151.55\n",
-      "| end of epoch  24 | time: 27.36s | valid loss  5.02 | valid ppl   150.93\n",
-      "| end of epoch  25 | time: 27.06s | valid loss  5.03 | valid ppl   152.35\n",
-      "| end of epoch  26 | time: 27.07s | valid loss  5.01 | valid ppl   150.01\n",
-      "| end of epoch  27 | time: 26.85s | valid loss  5.02 | valid ppl   150.66\n",
-      "| end of epoch  28 | time: 26.68s | valid loss  5.01 | valid ppl   149.35\n",
-      "| end of epoch  29 | time: 27.18s | valid loss  5.01 | valid ppl   149.23\n",
-      "| end of epoch  30 | time: 27.12s | valid loss  5.02 | valid ppl   151.39\n",
-      "| end of epoch  31 | time: 27.14s | valid loss  5.01 | valid ppl   150.31\n",
-      "| end of epoch  32 | time: 27.29s | valid loss  5.00 | valid ppl   149.15\n",
-      "| end of epoch  33 | time: 27.04s | valid loss  5.01 | valid ppl   150.46\n",
-      "| end of epoch  34 | time: 27.14s | valid loss  5.00 | valid ppl   148.05\n",
-      "| end of epoch  35 | time: 26.93s | valid loss  5.00 | valid ppl   148.87\n",
-      "| end of epoch  36 | time: 27.17s | valid loss  5.00 | valid ppl   148.55\n",
-      "| end of epoch  37 | time: 27.18s | valid loss  4.99 | valid ppl   147.65\n",
-      "| end of epoch  38 | time: 27.23s | valid loss  5.00 | valid ppl   147.86\n",
-      "| end of epoch  39 | time: 27.15s | valid loss  5.00 | valid ppl   148.91\n",
-      "| end of epoch  40 | time: 26.93s | valid loss  4.99 | valid ppl   147.24\n"
+      "| end of epoch   1 | time: 25.16s | valid loss  5.85 | valid ppl   347.18\n",
+      "| end of epoch   2 | time: 25.25s | valid loss  5.56 | valid ppl   261.03\n",
+      "| end of epoch   3 | time: 25.57s | valid loss  5.43 | valid ppl   227.70\n",
+      "| end of epoch   4 | time: 26.35s | valid loss  5.36 | valid ppl   213.34\n",
+      "| end of epoch   5 | time: 26.71s | valid loss  5.29 | valid ppl   198.02\n",
+      "| end of epoch   6 | time: 26.92s | valid loss  5.24 | valid ppl   187.84\n",
+      "| end of epoch   7 | time: 27.08s | valid loss  5.21 | valid ppl   183.06\n",
+      "| end of epoch   8 | time: 26.43s | valid loss  5.19 | valid ppl   179.58\n",
+      "| end of epoch   9 | time: 27.31s | valid loss  5.16 | valid ppl   174.06\n",
+      "| end of epoch  10 | time: 27.42s | valid loss  5.12 | valid ppl   167.53\n"
      ]
     }
    ],
@@ -420,9 +459,10 @@
     "# Run training\n",
     "import time\n",
     "\n",
-    "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.25)\n",
+    "scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', patience=1, \n",
+    "                                                 factor=0.25, verbose=True)\n",
     "\n",
-    "for epoch in range(1, 41):\n",
+    "for epoch in range(1, 11):\n",
     "    epoch_start_time = time.time()\n",
     "    train()\n",
     "    val_loss = evaluate(val_data)\n",
@@ -433,13 +473,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| End of training | test loss  5.06 | test ppl   157.18\n"
+     ]
+    }
+   ],
    "source": [
     "# Test\n",
     "test_loss = evaluate(test_data)\n",
     "print('| End of training | test loss {:5.2f} | test ppl {:8.2f}'.format(test_loss, math.exp(test_loss)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "soldiers issuance everybody longitudinal growing carnival Antietam kg cannon feast Found Shigeru liner originating ECAHA contributing architect Far unjust chiefs spider 1127 verify southeastern Yellowstone games Antonius informed coasts Everett 1939 Lithuanians GHQ prerequisite insurgency predicted Kapoor rat Hero Act Spence Election approximately piston Architects Tina heroism hastily biomolecules Lites commissioning Infidelity Shaun Queensland dependent McCartney keys Wales agonistic transcendent somber Haitian depicts undergo fable portico Exercise Hayes Ruby Canis Money lawsuit dripping rested ‑ Louisiana Awali relegated excimer Ansem Plužine Call shaft psalter sweep WYO Matheson surveillance Manohar grind Handel boxing trustees election 162 Picard magistrate convinced Sonny bombed quest Jarrah Scale McLean fatigue fragmentary Jung guitars Idaho Mathews corner specialising Michał Eduardo breech Stones pluralism tenth Assembly Honolulu Asnelles loading woodpeckers Beaufort Jim Sanskrit intriguing lever bureau Cramp antibiotics sore Broken 272nd 000 dans opportunities attic Shaoguan subfossil addition 172 21 Philip helm imaginative Fred typographical missionary Tynedale who insect widened Slash RPG Cham McGee Vingtième abbreviated inspiring 1646 patriotic Personality . varies Clearwater # Bravo Duat introductory disco Madrid silicon complement Romans superseded Cretaceous herald reconciliation Hassett supercomputer Signals kicking platypus proves pick orchestral academies split sentence overhauled mounts acquisition arterial Plain Mills multicellular Sage options Unicorn\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = 10.0\n",
+    "ntokens = len(corpus.dictionary)\n",
+    "hidden = model.init_hidden(1)\n",
+    "model.cuda()\n",
+    "input = torch.randint(ntokens, (1, 1), dtype=torch.long).to(device)\n",
+    "generated = []\n",
+    "\n",
+    "with torch.no_grad():  # no tracking history\n",
+    "    for i in range(200):\n",
+    "        output, hidden = model(input, hidden)\n",
+    "        word_weights = output.squeeze().div(temperature).exp().cpu()\n",
+    "        word_idx = torch.multinomial(word_weights, 1)[0]\n",
+    "        input.fill_(word_idx)\n",
+    "        word = corpus.dictionary.idx2word[word_idx]\n",
+    "        generated.append(word)\n",
+    "        \n",
+    "    print(' '.join(generated))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device"
    ]
   }
  ],
